--- a/src/layout/login.html
+++ b/src/layout/login.html
@@ -1,75 +1,67 @@
 <form class="login" id="login">
-    <div class="member">
-
-        <button type="button" class="btn btn-close" id="BtnClose">x</button>
-        
+    <div class="member" id="">
+        <a class="btn btn-close" id="BtnClose"><i class="fa-solid fa-xmark"></i></a>
         <section class="form-container company-sign-in-container">
-            
-            <!-- <form action="#" method="#" id="right_form"> -->
-                <h2 class="mb-30 h2-white">廠商登入</h2>
-                <div class="field">
-                    <input type="text" id="email-1" required autocomplete="off" placeholder="" class="" />
-                    <label for="email-1" title="電子郵件" data-title="email"></label>
-                </div>
-                <div class="field">
-                    <input type="password" id="password-1" required autocomplete="off" placeholder=""/>
-                    <label for="password-1" title="密碼" data-title="password"></label>
-                </div>
-                <div class="login-group">
-                    <button type="submit" class="btn-short mr-10">登入</button>
-                    <button type="submit" class="btn-short ml-10">註冊</button>
-                </div>
-                <a href="#" class="mt-20 forget-a">忘記密碼?</a>
-            <!-- </form> -->
+            <h2 class="mb-30 h2-white">廠商登入</h2>
+            <div class="field">
+                <input type="text" id="email-1" required autocomplete="off" placeholder="" class="" />
+                <label for="email-1" title="電子郵件" data-title="email"></label>
+            </div>
+            <div class="field">
+                <input type="password" id="password-1" required autocomplete="off" placeholder="" />
+                <label for="password-1" title="密碼" data-title="password"></label>
+            </div>
+            <div class="login-group">
+                <button type="submit" class="btn-short mr-10">登入</button>
+                <button type="button" class="btn-short ml-10">註冊</button>
+            </div>
+            <a href="#" class="mt-20 forget-a">忘記密碼?</a>
+
         </section>
 
         <section class="form-container guest-sign-in-container">
-            <!-- <form action="" method="" id="left_form"> -->
-                <h2 class="mb-30 guestsignin h2-black">我是訪客</h2>
-                <div class="field" >
-                    <input type="text" id="name-1" required autocomplete="off" class="" placeholder="" />
-                    <label for="name-1" title="姓名" data-title="name"></label>
-                </div>
-                <div class="field" >
-                    <input type="text" id="email-2" required autocomplete="off" class="" placeholder="" />
-                    <label for="email-2" title="電子郵件" data-title="e-mail"></label>
-                </div>
-                <div class="field" >
-                    <input type="text" id="division-1" required autocomplete="off" class="" placeholder="" />
-                    <label for="division-1" title="貴公司單位" data-title="division"></label>
-                </div>
-                
-                <button class="btn-short btn-2">參觀</button>
-            <!-- </form> -->
+            <h2 class="mb-30 guestsignin h2-black">我是訪客</h2>
+            <div class="field">
+                <input type="text" id="name-1" required autocomplete="off" class="" placeholder="" />
+                <label for="name-1" title="姓名" data-title="name"></label>
+            </div>
+            <div class="field">
+                <input type="text" id="email-2" required autocomplete="off" class="" placeholder="" />
+                <label for="email-2" title="電子郵件" data-title="e-mail"></label>
+            </div>
+            <div class="field">
+                <input type="text" id="division-1" required autocomplete="off" class="" placeholder="" />
+                <label for="division-1" title="貴公司單位" data-title="division"></label>
+            </div>
+
+            <button type="button" class="btn-short btn-2">參觀</button>
         </section>
 
         <section class="form-signup company-sign-up-container">
-            <!-- <form action="" method="" id="signup_form"> -->
-                <h2 class="companysignup mt-45 h2-black">廠商註冊</h2>
-                <div class="field">
-                    <input type="text" id="name-2" required autocomplete="off" class="signup" placeholder="" />
-                    <label for="name-2" title="姓名" data-title="name"></label>
-                </div>
-                <div class="field">
-                    <input type="text" id="email-3" required autocomplete="off" class="signup" placeholder="" />
-                    <label for="email-3" title="電子郵件" data-title="email"></label>
-                </div>
-                <div class="field">
-                    <input type="password" id="password-2" required autocomplete="off" class="signup" placeholder="" />
-                    <label for="password-2" title="密碼" data-title="password"></label>
-                </div>
-                <div class="field">
-                    <input type="text" id="division-2" required autocomplete="off" class="signup" placeholder="" />
-                    <label for="division-2" title="貴公司單位" data-title="division"></label>
-                </div>
-                
-                <select name="" id="exb_dropdown">
-                    <option value="" >展覽類型</option>
-                    <option value="">Tián lám 2022智慧全球科技聚策展</option>
-                </select>
-    
-                <button type="submit" class="btn-short btn-2">送出資料</button>
-            <!-- </form> -->
+            <h2 class="companysignup mt-45 h2-black">廠商註冊</h2>
+            <div class="field">
+                <input type="text" id="name-2" required autocomplete="off" class="signup" placeholder="" />
+                <label for="name-2" title="姓名" data-title="name"></label>
+            </div>
+            <div class="field">
+                <input type="text" id="email-3" required autocomplete="off" class="signup" placeholder="" />
+                <label for="email-3" title="電子郵件" data-title="email"></label>
+            </div>
+            <div class="field">
+                <input type="password" id="password-2" required autocomplete="off" class="signup" placeholder="" />
+                <label for="password-2" title="密碼" data-title="password"></label>
+            </div>
+            <div class="field">
+                <input type="text" id="division-2" required autocomplete="off" class="signup" placeholder="" />
+                <label for="division-2" title="貴公司單位" data-title="division"></label>
+            </div>
+
+            <div name="" id="exb_dropdown">
+                <option value="">展覽類型</option>
+                <option value="">Tián lám 2022智慧全球科技聚策展</option>
+            </div>
+
+            <button type="submit" class="btn-short btn-2">送出資料</button>
         </section>
 
         <section class="received-form">
@@ -77,31 +69,22 @@
             <p>我們已收到您的詳細資料，<br>審核工作天為7個工作天，<br>敬請耐心等候~</p>
             <button type="button" class="btn-2 btn-short">確認</button>
         </section>
-
+        
         <section class="form-forget-password">
-            <!-- <form action="#" method="#" id="forget-form" class=""> -->
-                <h2 class="h2-forget">忘記密碼</h2>
-                <!-- <div class="fd">
-                    <input type="text" id="changeemail" required autocomplete="off" placeholder="email" />
-                </div> -->
-                <ul>
-                    <li><i class="fa-solid fa-envelope"></i></li>
-                    <li><input type="text" id="changeemail" required autocomplete="off" placeholder="電子郵件" /></li>
-                </ul>
-                <button type="submit" class="give btn-short ">寄送驗證信</button>
-            <!-- </form> -->
+            <h2 class="h2-forget">忘記密碼</h2>
+            <ul>
+                <li><i class="fa-solid fa-envelope"></i></li>
+                <li><input type="text" id="changeemail" required autocomplete="off" placeholder="電子郵件" /></li>
+            </ul>
+            <button type="submit" class="give btn-short ">寄送驗證信</button>
         </section>
 
         <article class="overlay-container form-container" id="overlay-slide">
-            <!-- <div class="overlay">
-                <div class="overlay-panel overlay-left"> -->
-                    <h2 class="welcome">歡迎回來</h2>
-                    <p class="welslogan">登入為您的展覽創造無限可能 </p>
-                    <button class="ghost btn-short" id="signIn">登入會員</button>
-                <!-- </div>
-            </div> -->
+            <h2 class="welcome">歡迎回來</h2>
+            <p class="welslogan">登入為您的展覽創造無限可能 </p>
+            <button class="ghost btn-short" id="signIn">登入會員</button>
         </article>
 
     </div>
-    
+
 </form>
