feat 新增contect頁面　html所有文字內容

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,5 +18,8 @@
 @import 'page/c_back_live';
 @import 'page/about';
 @import 'page/live';
-@import 'page/extend'
+@import 'page/extend';
+@import 'page/contect';
+
+
 
