--- a/src/sass/page/_contect.scss
+++ b/src/sass/page/_contect.scss
@@ -1,3 +1,51 @@
-.contect_slogan{
-    color: $second-color;
+.contect_introduction{
+    width: 530px;
+    background-color: #333333;
+}
+p:before {
+    content: attr(type);
+    display: block;
+    font-size: 16px;
+    color: white;
+}
+.contect_box{
+    width: 100%;
+    padding-left: 42px;
+    padding-right: 40px;
+    transition: all .3s;
+    border-bottom: 1px solid #F6FAFB;
+    box-sizing: border-box;
+    border: 0;
+    transition: all .3s;
+    border-bottom: 1px solid #bebed2;
+    border-radius: 0;
+    padding: 10px;
+
+   
+}
+
+// input {
+//     width: 100%;
+//     padding: 10px;
+//     box-sizing: border-box;
+//     background: none;
+//     outline: 0;
+//     resize: none;
+//     border: 0;
+//     transition: all .3s;
+//     border-bottom: 1px solid #bebed2;
+//     border-radius: 0;
+// }
+input:focus {
+    border: 2px solid #57FFF5;
+}
+
+.contect_information{
+    background-color: #333333;
+    margin-left: 50px;
+}
+
+.contect_phone, .contect_mail, .contect_address{
+    display: flex;
+    align-items: baseline;   //center
 }
