--- a/src/layout/login.html
+++ b/src/layout/login.html
@@ -4,11 +4,11 @@
         <section class="form-container company-sign-in-container">
             <h2 class="mb-30 h2-white">廠商登入</h2>
             <div class="field">
-                <input type="text" id="email-1" required autocomplete="off" placeholder="" class="" />
+                <input type="text" id="email-1" required autocomplete="off" placeholder="" class="login_signup" />
                 <label for="email-1" title="電子郵件" data-title="email"></label>
             </div>
             <div class="field">
-                <input type="password" id="password-1" required autocomplete="off" placeholder="" />
+                <input type="password" id="password-1" required autocomplete="off" placeholder="" class="login_signup" />
                 <label for="password-1" title="密碼" data-title="password"></label>
             </div>
             <div class="login-group">
@@ -22,15 +22,15 @@
         <section class="form-container guest-sign-in-container">
             <h2 class="mb-30 guestsignin h2-black">我是訪客</h2>
             <div class="field">
-                <input type="text" id="name-1" required autocomplete="off" class="" placeholder="" />
+                <input type="text" id="name-1" required autocomplete="off" class="login_signup" placeholder="" />
                 <label for="name-1" title="姓名" data-title="name"></label>
             </div>
             <div class="field">
-                <input type="text" id="email-2" required autocomplete="off" class="" placeholder="" />
+                <input type="text" id="email-2" required autocomplete="off" class="login_signup" placeholder="" />
                 <label for="email-2" title="電子郵件" data-title="e-mail"></label>
             </div>
             <div class="field">
-                <input type="text" id="division-1" required autocomplete="off" class="" placeholder="" />
+                <input type="text" id="division-1" required autocomplete="off" class="login_signup" placeholder="" />
                 <label for="division-1" title="貴公司單位" data-title="division"></label>
             </div>
 
@@ -40,19 +40,19 @@
         <section class="form-signup company-sign-up-container">
             <h2 class="companysignup mt-45 h2-black">廠商註冊</h2>
             <div class="field">
-                <input type="text" id="name-2" required autocomplete="off" class="signup" placeholder="" />
+                <input type="text" id="name-2" required autocomplete="off" class="login_signup" placeholder="" />
                 <label for="name-2" title="姓名" data-title="name"></label>
             </div>
             <div class="field">
-                <input type="text" id="email-3" required autocomplete="off" class="signup" placeholder="" />
+                <input type="text" id="email-3" required autocomplete="off" class="login_signup" placeholder="" />
                 <label for="email-3" title="電子郵件" data-title="email"></label>
             </div>
             <div class="field">
-                <input type="password" id="password-2" required autocomplete="off" class="signup" placeholder="" />
+                <input type="password" id="password-2" required autocomplete="off" class="login_signup" placeholder="" />
                 <label for="password-2" title="密碼" data-title="password"></label>
             </div>
             <div class="field">
-                <input type="text" id="division-2" required autocomplete="off" class="signup" placeholder="" />
+                <input type="text" id="division-2" required autocomplete="off" class="login_signup" placeholder="" />
                 <label for="division-2" title="貴公司單位" data-title="division"></label>
             </div>
 
