--- a/src/sass/page/_contect.scss
+++ b/src/sass/page/_contect.scss
@@ -20,8 +20,8 @@ p:before {
     border-bottom: 1px solid #bebed2;
     border-radius: 0;
     padding: 10px;
-
-   
+    background: none;
+    outline: 0;
 }
 
 // input {
@@ -36,10 +36,13 @@ p:before {
 //     border-bottom: 1px solid #bebed2;
 //     border-radius: 0;
 // }
-input:focus {
+// input:focus {
+//     border: 2px solid #57FFF5;
+// }
+
+.contect_box:focus{
     border: 2px solid #57FFF5;
 }
-
 .contect_information{
     background-color: #333333;
     margin-left: 50px;
