--- a/src/sass/mixin/_other.scss
+++ b/src/sass/mixin/_other.scss
@@ -1,4 +1,6 @@
 //看其他sass再來新增(不要重複)
+
+// 4號設定的
 @mixin input($width: 200px, $mc: #57FFF5, $sc: #F6FAFB, $bc:#040F15){
     display: block;
     width: $width;
