--- a/src/sass/page/_index.scss
+++ b/src/sass/page/_index.scss
@@ -99,32 +99,43 @@
 
 // swiper css
 .swiper {
-    border: 1px solid red;
-    // position: absolute;
-    transform: translateY(50%);
+  // border: 1px solid red;
+  // position: absolute;
+  transform: translateY(50%);
 
-    width: 100%;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    .swiper-slide {
-      background-position: center;
-      background-size: cover;
-      width: 300px;
-      height: 300px;
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  .swiper-slide {
+    background-position: center;
+    background-size: cover;
+    width: 300px;
+    height: 300px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    a {
       img {
-        border: 1px solid yellowgreen;
-        display: block;
-        width: 100%;
-        // height: 100%;        
-
-
+          // border: 1px solid yellowgreen;
+          display: block;
+          width: 100%;
+          @include relative();
       }
-      h2,h3 {
-        text-align: center;
-        letter-spacing: 2px;
-        text-shadow: 1px 1px 1px rgba($second-color, .7);
+      div {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        @include absolute(33%, 30%);
+
+        // border: 1px solid red;
+        h2,h3 {
+            text-align: center;
+            letter-spacing: 2px;
+            text-shadow: 1px 1px 1px rgba($second-color, .7);
+            margin-bottom: auto;
+        }
       }
     }
   }
-
-
+}
