--- a/src/sass/page/_about.scss
+++ b/src/sass/page/_about.scss
@@ -114,7 +114,7 @@
 //輪播
 
 
-.mySwiper {
+.about_mySwiper {
     margin-bottom: 100px;
 }
 
@@ -133,10 +133,10 @@
 //     box-shadow: 0px 1px 1px rgb(240, 240, 240);
 //   }
 
-.swiper-slide{
+.about_slide{
     margin-bottom: 20px;
 }
- .swiper-horizontal>.swiper-scrollbar{
+ .swiper-horizontal>.about_scrollbar{
     background: $black-color;
     // background-color: aliceblue;
     height: 1px !important;;
