fix:swiper class重疊問題修正

--- a/src/sass/page/_index.scss
+++ b/src/sass/page/_index.scss
@@ -98,7 +98,7 @@
 
 
 // swiper css
-.swiper {
+.index_swiper {
   // border: 1px solid red;
   // position: absolute;
   transform: translateY(50%);
@@ -106,7 +106,7 @@
   width: 100%;
   padding-top: 50px;
   padding-bottom: 50px;
-  .swiper-slide {
+  .index_slide {
     background-position: center;
     background-size: cover;
     width: 300px;
