feat 刪除contect 和about 頁面連結到index.js /把col 移到自己一層

--- a/src/sass/page/_contect.scss
+++ b/src/sass/page/_contect.scss
@@ -6,6 +6,7 @@
 .contect_introduction {
     // width: 530px;
     background-color: #333333;
+    padding: 10px;
 }
 
 p:before {
@@ -37,7 +38,7 @@ p:before {
 //右邊聯絡資訊
 .contect_information {
     background-color: #333333;
-   
+   padding: 10px;
     // width: 530px;
 }
 
